minikube/minikube-quarkus-todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-todo
  template:
    metadata:
      labels:
        app: quarkus-todo
    spec:      
      containers:
        - name: quarkus-todo-app
          image: REGISTRY_IP:5000/quarkus/QUARKUS_BUILD/todo-app:VERSION
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-todo
  labels:
    app: quarkus-todo
spec:
  type: NodePort
  ports:
   - port: 8080
  selector:
   app: quarkus-todo
